added assning and studend dahsboard

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-dom": "^16.8.6",
     "react-icons": "^3.7.0",
     "react-router-dom": "^5.0.1",
+    "react-select": "^3.0.4",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "semver": "6.0.0",
